# internal/model/file.go
@@ -3,15 +3,16 @@ package model
 import "time"
 
 type File struct {
-	ID string
-	UploadID *string
-	ObjectKey string
-	FileName string
+	ID          string
+	UploadID    *string
+	Bucket      string
+	ObjectKey   string
+	FileName    string
 	ContentType string
-	Size int64
-	ETag *string
-	Status string
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	DeletedAt *time.Time
+	Size        int64
+	ETag        *string
+	Status      string
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
+	DeletedAt   *time.Time
 }
